# incident-commander

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  evals.yml
alembic/: env.py
alembic/versions/: c362fc714309_run_snapshots.py
contracts/: platform-tools.snapshot.json
demo/: README.md  compose.yml
docs/ADR/: 0000-template.md  0001-external-client-architecture.md  0002-hand-rolled-state-machine.md
evals/: fakes.py  regression.py  runner.py
evals/graders/: deterministic.py  llm_judge.py
evals/reports/: baseline.json
evals/scenarios/: consumer_lag_analytics_critical.yaml  consumer_lag_healthy_zero.yaml  consumer_lag_high.yaml  consumer_lag_medium.yaml  consumer_lag_missing_group.yaml  consumer_lag_orders_high.yaml  consumer_lag_payments_critical.yaml  consumer_lag_shipping_extreme.yaml  loader.py  multi_probe_billing.yaml  multi_probe_hypothesis_evolution.yaml  noise_info_orders.yaml  noise_info_severity.yaml  noise_low_analytics.yaml  noise_low_severity.yaml  noise_missing_severity.yaml  planner_stops_immediately.yaml  schema.py  tool_missing_response.yaml  tool_output_schema_mismatch.yaml  tool_result_marked_error.yaml
scripts/: bootstrap_agent_token.py  snapshot_platform_tools.py
src/incident_commander/: __init__.py  config.py
tests/integration/: conftest.py  test_contract_snapshot.py  test_postgres_checkpointer.py
tests/unit/: conftest.py  test_api.py  test_briefing.py  test_briefing_enrichment.py  test_config.py  test_contract.py  test_factory.py  test_grader.py  test_hmac_verify.py  test_hypothesis.py  test_investigation.py  test_llm_client.py  test_llm_fakes.py  test_llm_investigation.py  test_llm_judge.py  test_loop.py  test_mcp_client.py  test_memory_checkpointer.py  test_orchestrator.py  test_prompts_snapshot.py  test_registry.py  test_regression.py  test_runner.py  test_scenario_loader.py  test_scenario_schema.py  test_smoke.py  test_state.py  test_triage.py
(+23 files in other folders)
