[project]
name = "incident-commander"
version = "0.1.0"
description = "Autonomous AI SRE agent that investigates, remediates, and learns from production incidents on the Incident Platform."
authors = [
    { name = "Kudrat Singh", email = "singhkudrat1999@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "testcontainers[postgres]>=4.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["."]
